improv: code cleanup